# congress-predictions

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 528e451bd90f_change_stock_daily_volume_to_biginteger.py  d68ed06192f9_initial_schema_all_17_tables.py
dashboard/: api_client.py  app.py  charts.py
dashboard/pages/: backtesting.py  member_explorer.py  network_graph.py  overview.py  screener.py  signals.py  trade_feed.py
docs/: competitive_assessment.md
scripts/: backfill_bill_sponsors.py  backfill_bills.py  backfill_campaign_finance.py  backfill_committee_assignments.py  backfill_committee_memberships.py  backfill_hearings.py  backfill_house_clerk.py  backfill_media.py  extract_tickers.py  link_trades_to_members.py  seed_initial_data.py  train_models.py
src/: config.py  logging_config.py  main.py  metrics.py
src/api/: cache.py  deps.py  middleware.py
src/api/v1/: health.py  legislation.py  media.py  members.py  network.py  predictions.py  recommendations.py  signals.py  trades.py
src/db/: neo4j.py  postgres.py  redis.py
src/graph/: queries.py  schema.py  sync.py
src/ingestion/: base.py  loader.py
src/ml/: __init__.py  dataset.py  dataset_fast.py  evaluation.py  features.py  gnn_embeddings.py  predictor.py  screener.py  training.py
src/ml/models/: __init__.py  (+7 more)
src/models/: __init__.py  campaign_finance.py  financial.py  legislation.py  lobbying.py  media.py  member.py  ml.py  signal.py  trade.py
src/processing/: normalizer.py  text_processing.py  timing_analysis.py
src/schemas/: legislation.py  media.py  member.py  network.py  predictions.py  recommendations.py  signals.py  trade.py
src/signals/: __init__.py  alerting.py  generator.py  scorer.py
src/tasks/: celery_app.py  ingestion_tasks.py  legislation_tasks.py  media_tasks.py  ml_tasks.py  network_tasks.py  signal_tasks.py
tests/: conftest.py
(+53 files in other folders)
