[project]
name = "congress-predictions"
version = "0.1.0"
description = "Congressional trade prediction system with network analysis and ML"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "greenlet>=3.1.0",
    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    # HTTP client
    "httpx>=0.28.0",
    # Data validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Data processing
    "pandas>=2.2.0",
    "yfinance>=0.2.48",
    # Graph database
    "neo4j>=5.25.0",
    # Utilities
    "python-dateutil>=2.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "thefuzz[speedup]>=0.22.0",
    "youtube-transcript-api>=0.6.0",
    "feedparser>=6.0.0",
    # Observability
    "python-json-logger>=2.0.0",
    "prometheus-client>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.6.0",
    "lightgbm>=4.5.0",
    "xgboost>=2.1.0",
    "torch>=2.5.0",
    "torch-geometric>=2.6.0",
    "transformers>=4.46.0",
    "spacy>=3.8.0",
]
dashboard = [
    "streamlit>=1.41.0",
    "plotly>=5.24.0",
    "pyvis>=0.3.2",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx",  # for TestClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
